--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="board">
   <div class="board-column done">
-    <div class="board-column-header">RMST 1</div>
+    <div class="board-column-header">RMST 1 (13) SANTA MARIA M59</div>
     <div class="board-column-content" id="count1">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
@@ -25,14 +25,11 @@
         <div class="board-item"><div class="board-item-content" class="e">TRAN</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MACGREGOR</div></div>
         <div class="board-item"><div class="board-item-content" id="a">FISHER</div></div>
-        <div>13</div>
-                <div>SANTA MARIA M59</div>
-
         <div id="count"></div>
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 2</div>
+    <div class="board-column-header">RMST 2 (10) SAN JOSE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>PENOLA</i></b></div></div>
@@ -44,14 +41,10 @@
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN H🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MORALES</div></div>
         <div class="board-item"><div class="board-item-content" id="a">AGUIRRE</div></div>
-                <div>10</div>
-                <div>SAN JOSE</div>
-
-
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 3</div>
+    <div class="board-column-header">RMST 3 (10) RED BLUFF</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>QUIOCSON</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">CRUZ🚗</div></div>
@@ -63,14 +56,10 @@
         <div class="board-item"><div class="board-item-content" class="e">KONG</div></div>
         <div class="board-item"><div class="board-item-content" id="a">ANDRADE</div></div>
         <div class="board-item"><div class="board-item-content" id="a">DIAZ</div></div>
-                <div>10</div>
-                <div>RED BLUFF</div>
-
-
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 4</div>
+    <div class="board-column-header">RMST 4 (11) RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR</i></b></div></div>
@@ -83,13 +72,10 @@
         <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
         <div class="board-item"><div class="board-item-content" id="a">OROZCO</div></div>
         <div class="board-item"><div class="board-item-content" id="a">SAUNIER🚗</div></div>
-                <div>11</div>
-        <div>RESET</div>
-
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 5</div>
+    <div class="board-column-header">RMST 5 (11 + 1) SAN JOSE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>REGAN</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>MAGART-DAVIS</i></b></div></div>
@@ -102,14 +88,10 @@
         <div class="board-item"><div class="board-item-content" class="e">DELACRUZ🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LINDBECK</div></div>
         <div class="board-item"><div class="board-item-content" id="a">NGUYEN🚗</div></div>
-                <div>11 + 1</div>
-                <div>SAN JOSE</div>
-
-
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 6</div>
+    <div class="board-column-header">RMST 6 (11) RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
@@ -122,14 +104,10 @@
         <div class="board-item"><div class="board-item-content" class="e">OTIKA🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MAGANA</div></div>
         <div class="board-item"><div class="board-item-content" id="a">CLEMMONS🚗</div></div>
-                <div>11</div>
-                <div>RESET</div>
-
-
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">TOC</div>
+    <div class="board-column-header">TOC (15)</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b>PHAL🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">NGUYEN🚗</div></div>
@@ -146,8 +124,6 @@
         <div class="board-item"><div class="board-item-content" id="n">NARVASA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">JAMPHAL</div></div>
         <div class="board-item"><div class="board-item-content" class="e">SEBASTIAN</div></div>
-                <div>15</div>
-
     </div>
   </div>
 </div>
