--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="board">
   <div class="board-column done">
-    <div class="board-column-header">RMST 1 (13) SANTA MARIA M59</div>
+    <div class="board-column-header">RMST 1 (13) <br> SANTA MARIA M59</div>
     <div class="board-column-content" id="count1">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 2 (10) SAN JOSE</div>
+    <div class="board-column-header">RMST 2 (10) <br> SAN JOSE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>PENOLA</i></b></div></div>
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 3 (10) RED BLUFF</div>
+    <div class="board-column-header">RMST 3 (10) <br> RED BLUFF</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>QUIOCSON</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">CRUZ🚗</div></div>
@@ -59,7 +59,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 4 (11) RESET</div>
+    <div class="board-column-header">RMST 4 (11) <br> RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR</i></b></div></div>
@@ -75,7 +75,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 5 (11 + 1) SAN JOSE</div>
+    <div class="board-column-header">RMST 5 (11 + 1) <br> SAN JOSE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>REGAN</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>MAGART-DAVIS</i></b></div></div>
@@ -91,7 +91,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 6 (11) RESET</div>
+    <div class="board-column-header">RMST 6 (11) <br> RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
