--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
         <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
         <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
         <link rel="stylesheet" href="style.css">
-        
-        
     </head>
     <body>
         <div class="board">
   <div class="board-column done">
     <div class="board-column-header">RMST 1 (13) <br> SANTA MARIA M59</div>
+    <div class="board-column-header">SANTA MARIA M59</div>
     <div class="board-column-content" id="count1">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
@@ -25,7 +24,6 @@
         <div class="board-item"><div class="board-item-content" class="e">TRAN</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MACGREGOR</div></div>
         <div class="board-item"><div class="board-item-content" id="a">FISHER</div></div>
-        <div id="count"></div>
     </div>
   </div>
   <div class="board-column done">
