--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 2 (10) <br> SAN JOSE</div>
+    <div class="board-column-header">RMST 2 (10) </div>
+    <div class="board-column-header">SAN JOSE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>PENOLA</i></b></div></div>
@@ -42,7 +43,8 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 3 (10) <br> RED BLUFF</div>
+    <div class="board-column-header">RMST 3 (10) </div>
+    <div class="board-column-header">RED BLUFF</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>QUIOCSON</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">CRUZ🚗</div></div>
@@ -57,7 +59,8 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 4 (11) <br> RESET</div>
+    <div class="board-column-header">RMST 4 (11) </div>
+      <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR</i></b></div></div>
@@ -73,7 +76,8 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 5 (11 + 1) <br> SAN JOSE</div>
+    <div class="board-column-header">RMST 5 (11 + 1) </div>
+    <div class="board-column-header">SAN JOSE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>REGAN</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>MAGART-DAVIS</i></b></div></div>
@@ -89,7 +93,8 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 6 (11) <br> RESET</div>
+    <div class="board-column-header">RMST 6 (11) </div>
+    <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
