--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
         <div class="board-item"><div class="board-item-content" class="e">SEBASTIAN</div></div>
     </div>
   </div>
+    <div class="board-column done">
+        <div class="board-column-header">LEAVE</div>
+    </div>
+    <div class="board-column done">
+        <div class="board-column-header">ISO/SIQ</div>
+    </div>
+    <div class="board-column done">
+        <div class="board-column-header">EOM</div>
+    </div>
 </div>
         <script src="/jquery/dist/jquery.js"></script>
         <script>
