--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR</i></b></div></div>
+        <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ</div></div>
@@ -117,12 +117,12 @@
         <div class="board-item"><div class="board-item-content" id="o">MACIAS🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o">SPINELLI🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o">MULLEE🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="o">BLACK</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">BLACK🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b>SULLIVAN</b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">MCENTEE🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n">LEE</div></div>
         <div class="board-item"><div class="board-item-content" id="n">SOLIS</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">GARCIA🚗</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARCIA</div></div>
         <div class="board-item"><div class="board-item-content" id="n">SCHLITZ</div></div>
         <div class="board-item"><div class="board-item-content" id="n">NARVASA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">JAMPHAL</div></div>
