--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
       <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ</div></div>
@@ -97,7 +96,6 @@
     <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>CAUDILLO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
@@ -131,6 +129,7 @@
   </div>
     <div class="board-column done">
         <div class="board-column-header">LEAVE</div>
+            <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-column-content">
             
         </div>
@@ -143,6 +142,8 @@
     </div>
     <div class="board-column done">
         <div class="board-column-header">EOM</div>
+            <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
+            <div class="board-item"><div class="board-item-content" id="o">RAFAILOV</div></div>
         <div class="board-column-content">
             
         </div>
