--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>FINN</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" class="e">PHILLIPS</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">PHILLIPS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAGGI</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAVISON🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">BULAGAO</div></div>
