--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 6 (11) </div>
-    <div class="board-column-header">RESET</div>
+    <div class="board-column-header">QUARNTINE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
+        <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>CAUDILLO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
@@ -143,7 +144,6 @@
     <div class="board-column done">
         <div class="board-column-header">EOM</div>
             <div class="board-column-content">
-                <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
                 <div class="board-item"><div class="board-item-content" id="o">RAFAILOV</div></div>
             </div>
         </div>             
