--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="board-column done">
         <div class="board-column-header">EOM</div>
             <div class="board-column-content">
-                <div class="board-item"><div class="board-item-content" id="o">RAFAILOV</div></div>
+                <div class="board-item"><div class="board-item-content" id="e">RAFAILOV</div></div>
             </div>
         </div>             
 </div>
