--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" class="e">VISAYA🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="n">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FERRATT</div></div>
