--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <div class="board-item"><div class="board-item-content" id="n">PHILLIPS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAGGI</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAVISON🚗</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">BULAGAO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FACTOR🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">XU</div></div>
         <div class="board-item"><div class="board-item-content" class="e">BARAJAS</div></div>
@@ -63,6 +62,7 @@
       <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
+        <div class="board-item"><div class="board-item-content" id="o">Taylor-Zollo</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
@@ -140,6 +140,7 @@
         <div class="board-column-header">ISO/SIQ</div>
         <div class="board-column-content">
             <div class="board-item"><div class="board-item-content" class="e">FLORIANO🚗</div></div>
+            <div class="board-item"><div class="board-item-content" class="e">BULAGAO</div></div>
         </div>
     </div>
     <div class="board-column done">
