--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">Taylor-Zollo</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">TAYLOR-ZOLLO</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
@@ -97,6 +97,7 @@
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">CARPENTER</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>CAUDILLO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
@@ -145,7 +146,6 @@
     <div class="board-column done">
         <div class="board-column-header">EOM</div>
             <div class="board-column-content">
-                <div class="board-item"><div class="board-item-content" id="n">PHILLIPS</div></div>
             </div>
         </div>             
 </div>
