--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">MARTINEZ</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">MARTINEZ A</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FERRATT</div></div>
         <div class="board-item"><div class="board-item-content" class="e">RICE</div></div>
         <div class="board-item"><div class="board-item-content" class="e">ANDERSON</div></div>
@@ -87,7 +87,7 @@
         <div class="board-item"><div class="board-item-content" class="e">SIMONS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DELACRUZ🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LINDBECK</div></div>
-        <div class="board-item"><div class="board-item-content" id="a">NGUYEN🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="a">NGUYEN D🚗</div></div>
     </div>
   </div>
   <div class="board-column done">
@@ -98,7 +98,7 @@
         <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o">CARPENTER</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>CAUDILLO</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" class="e">NGUYEN</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">NGUYEN M</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LARA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DOMINGO</div></div>
