--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="board">
   <div class="board-column done">
     <div class="board-column-header">RMST 1 (13) <br> SANTA MARIA M59</div>
-    <div class="board-column-header">SANTA MARIA M59</div>
+    <div class="board-column-header">RESET</div>
     <div class="board-column-content" id="count1">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
@@ -60,7 +60,7 @@
       <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">TAYLOR-ZOLLO</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">TAYLOR-ZOLLO🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
@@ -96,7 +96,7 @@
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="o">CARPENTER</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">CARPENTER🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>CAUDILLO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN M</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
