--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <body>
         <div class="board">
   <div class="board-column done">
-    <div class="board-column-header">RMST 1 (13) <br> SANTA MARIA M59</div>
+    <div class="board-column-header">RMST 1 (9) </div>
     <div class="board-column-header">RESET</div>
     <div class="board-column-content" id="count1">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>FINN</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAGGI</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DAVISON🚗</div></div>
@@ -25,7 +24,7 @@
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 2 (10) </div>
-    <div class="board-column-header">SAN JOSE</div>
+    <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>PENOLA</i></b></div></div>
@@ -40,11 +39,10 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 3 (10) </div>
+    <div class="board-column-header">RMST 3 (9) </div>
     <div class="board-column-header">RED BLUFF</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>QUIOCSON</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">CRUZ🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>BARRETTO🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">CAMACHO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GALLEGOS🚗</div></div>
@@ -56,26 +54,24 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 4 (11) </div>
+    <div class="board-column-header">RMST 4 (10 + 1) </div>
       <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">TAYLOR-ZOLLO🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">CARPENTER🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">VISAYA🚗</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ A</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FERRATT</div></div>
         <div class="board-item"><div class="board-item-content" class="e">RICE</div></div>
         <div class="board-item"><div class="board-item-content" class="e">ANDERSON</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
         <div class="board-item"><div class="board-item-content" id="a">OROZCO</div></div>
         <div class="board-item"><div class="board-item-content" id="a">SAUNIER🚗</div></div>
     </div>
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 5 (11 + 1) </div>
-    <div class="board-column-header">SAN JOSE</div>
+    <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>REGAN</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>MAGART-DAVIS</i></b></div></div>
@@ -91,15 +87,15 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 6 (10) </div>
+    <div class="board-column-header">RMST 6 (11) </div>
     <div class="board-column-header">QUARNTINE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="o">CARPENTER🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">TAYLOR-ZOLLO🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>CAUDILLO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN M</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">FLORIANO🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LARA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DOMINGO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">OTIKA🚗</div></div>
@@ -130,8 +126,9 @@
     <div class="board-column done">
         <div class="board-column-header">LEAVE</div>
             <div class="board-column-content">
-                <div class="board-item"><div class="board-item-content" id="e">RAFAILOV</div></div>
                 <div class="board-item"><div class="board-item-content" id="a">FISHER</div></div>
+                <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
+                <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
             </div>
         </div>
     
@@ -139,13 +136,14 @@
     <div class="board-column done">
         <div class="board-column-header">ISO/SIQ</div>
         <div class="board-column-content">
-            <div class="board-item"><div class="board-item-content" class="e">FLORIANO🚗</div></div>
             <div class="board-item"><div class="board-item-content" class="e">BULAGAO</div></div>
         </div>
     </div>
     <div class="board-column done">
         <div class="board-column-header">EOM</div>
             <div class="board-column-content">
+                <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
+                <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
             </div>
         </div>             
 </div>
