--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="board-item"><div class="board-item-content" class="e">DEMESA</div></div>
         <div class="board-item"><div class="board-item-content" class="e">EAGLES</div></div>
         <div class="board-item"><div class="board-item-content" class="e">JONES🚗</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">PALLAYA</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">PALLAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">SIMONS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DELACRUZ🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LINDBECK</div></div>
