--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="board">
   <div class="board-column done">
-    <div class="board-column-header">RMST 1 (9) </div>
+    <div class="board-column-header">RMST 1 (9 + 1) </div>
     <div class="board-column-header">RESET</div>
     <div class="board-column-content" id="count1">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
