--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="e">VADDER</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>PENOLA</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">ORTIZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHUN</div></div>
@@ -34,6 +35,7 @@
         <div class="board-item"><div class="board-item-content" class="e">GARCIA C</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GARCIA M🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN H🚗</div></div>
+        <div class="board-item"><div class="board-item-content" id="e">BENTEZLOPZEZ</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MORALES</div></div>
         <div class="board-item"><div class="board-item-content" id="a">AGUIRRE</div></div>
     </div>
