--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="board-column-header">RESET</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="e">VADDER</div></div>
+        <div class="board-item"><div class="board-item-content" id="e">VEDDER</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>PENOLA</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">ORTIZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHUN</div></div>
