--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="board-item"><div class="board-item-content" class="e">GARCIA C</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GARCIA M🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">NGUYEN H🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="e">BENTEZLOPZEZ</div></div>
+        <div class="board-item"><div class="board-item-content" id="e">BENTIEZLOPEZ</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MORALES</div></div>
         <div class="board-item"><div class="board-item-content" id="a">AGUIRRE</div></div>
     </div>
