--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 2 (12) </div>
-    <div class="board-column-header">RESET</div>
+    <div class="board-column-header">SAN JOSE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="e">VEDDER</div></div>
@@ -42,7 +42,7 @@
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 3 (9) </div>
-    <div class="board-column-header">RED BLUFF</div>
+    <div class="board-column-header">QUARANTINE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>QUIOCSON</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>BARRETTO🚗</i></b></div></div>
@@ -57,7 +57,7 @@
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 4 (10 + 1) </div>
-      <div class="board-column-header">RESET</div>
+      <div class="board-column-header">EL CAJON</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">CARPENTER🚗</div></div>
@@ -90,7 +90,7 @@
   </div>
   <div class="board-column done">
     <div class="board-column-header">RMST 6 (11) </div>
-    <div class="board-column-header">QUARNTINE</div>
+    <div class="board-column-header">EL CAJON</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">TAYLOR-ZOLLO🚗</div></div>
