--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="board-item"><div class="board-item-content" class="e">XU</div></div>
         <div class="board-item"><div class="board-item-content" class="e">BARAJAS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">TRAN</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">BULAGAO</div></div>
         <div class="board-item"><div class="board-item-content" id="a">MACGREGOR</div></div>
     </div>
   </div>
@@ -27,7 +28,7 @@
     <div class="board-column-header">SAN JOSE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>PARK</i></b>🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="e">VEDDER</div></div>
+        <div class="board-item"><div class="board-item-content" id="o">VEDDER</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>PENOLA</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">ORTIZ</div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHUN</div></div>
@@ -48,7 +49,6 @@
         <div class="board-item"><div class="board-item-content" id="n"><b><i>BARRETTO🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">CAMACHO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">GALLEGOS🚗</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FRANKIE🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KONG</div></div>
         <div class="board-item"><div class="board-item-content" id="a">ANDRADE</div></div>
@@ -64,7 +64,6 @@
         <div class="board-item"><div class="board-item-content" id="n"><b><i>SALDIBAR🚗</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ A</div></div>
-        <div class="board-item"><div class="board-item-content" class="e">FERRATT</div></div>
         <div class="board-item"><div class="board-item-content" class="e">RICE</div></div>
         <div class="board-item"><div class="board-item-content" class="e">ANDERSON</div></div>
         <div class="board-item"><div class="board-item-content" id="a">OROZCO</div></div>
@@ -95,7 +94,6 @@
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">TAYLOR-ZOLLO🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>CAUDILLO</i></b></div></div>
-        <div class="board-item"><div class="board-item-content" class="e">NGUYEN M</div></div>
         <div class="board-item"><div class="board-item-content" class="e">KABIGTING</div></div>
         <div class="board-item"><div class="board-item-content" class="e">FLORIANO🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">LARA</div></div>
@@ -138,14 +136,12 @@
     <div class="board-column done">
         <div class="board-column-header">ISO/SIQ</div>
         <div class="board-column-content">
-            <div class="board-item"><div class="board-item-content" class="e">BULAGAO</div></div>
+            <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
         </div>
     </div>
     <div class="board-column done">
         <div class="board-column-header">EOM</div>
             <div class="board-column-content">
-                <div class="board-item"><div class="board-item-content" id="o">KIER🚗</div></div>
-                <div class="board-item"><div class="board-item-content" id="o">GORNELL🚗</div></div>
             </div>
         </div>             
 </div>
