--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="board">
   <div class="board-column done">
-    <div class="board-column-header">RMST 1 (9 + 1) </div>
+    <div class="board-column-header">RMST 1 (10 + 1) </div>
     <div class="board-column-header">RESET</div>
     <div class="board-column-content" id="count1">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>IGNACIO</i>🚗</b></div></div>
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 3 (9) </div>
+    <div class="board-column-header">RMST 3 (8 + 1) </div>
     <div class="board-column-header">QUARANTINE</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>QUIOCSON</i></b></div></div>
@@ -56,7 +56,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 4 (10 + 1) </div>
+    <div class="board-column-header">RMST 4 (11) </div>
       <div class="board-column-header">EL CAJON</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>HO</i></b></div></div>
@@ -65,16 +65,17 @@
         <div class="board-item"><div class="board-item-content" id="n">VISAYA🚗</div></div>
         <div class="board-item"><div class="board-item-content" class="e">MARTINEZ A</div></div>
         <div class="board-item"><div class="board-item-content" class="e">RICE</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
+        <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
         <div class="board-item"><div class="board-item-content" class="e">ANDERSON</div></div>
         <div class="board-item"><div class="board-item-content" id="a">OROZCO</div></div>
         <div class="board-item"><div class="board-item-content" id="a">SAUNIER🚗</div></div>
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 5 (11 + 1) </div>
+    <div class="board-column-header">RMST 5 (10) </div>
     <div class="board-column-header">RESET</div>
     <div class="board-column-content">
-        <div class="board-item"><div class="board-item-content" id="o"><b><i>REGAN</i></b></div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b><i>MAGART-DAVIS</i></b></div></div>
         <div class="board-item"><div class="board-item-content" class="e">CHAMNESS</div></div>
         <div class="board-item"><div class="board-item-content" class="e">DEMESA</div></div>
@@ -88,7 +89,7 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">RMST 6 (11) </div>
+    <div class="board-column-header">RMST 6 (10) </div>
     <div class="board-column-header">EL CAJON</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b><i>DEJESUS</i></b></div></div>
@@ -104,14 +105,13 @@
     </div>
   </div>
   <div class="board-column done">
-    <div class="board-column-header">TOC (15)</div>
+    <div class="board-column-header">TOC (14 + 1)</div>
     <div class="board-column-content">
         <div class="board-item"><div class="board-item-content" id="o"><b>PHAL🚗</b></div></div>
         <div class="board-item"><div class="board-item-content" id="o">NGUYEN🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o">MACIAS🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o">SPINELLI🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="o">MULLEE🚗</div></div>
-        <div class="board-item"><div class="board-item-content" id="o">BLACK🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n"><b>SULLIVAN</b></div></div>
         <div class="board-item"><div class="board-item-content" id="n">MCENTEE🚗</div></div>
         <div class="board-item"><div class="board-item-content" id="n">LEE</div></div>
@@ -127,8 +127,7 @@
         <div class="board-column-header">LEAVE</div>
             <div class="board-column-content">
                 <div class="board-item"><div class="board-item-content" id="a">FISHER</div></div>
-                <div class="board-item"><div class="board-item-content" class="e">GARCIA B</div></div>
-                <div class="board-item"><div class="board-item-content" class="e">DRYER</div></div>
+                <div class="board-item"><div class="board-item-content" id="o">BLACK🚗</div></div>
             </div>
         </div>
     
