--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     
     
     <div class="board-column done">
-        <div class="board-column-header">ISO/SIQ</div>
+        <div class="board-column-header">🤒 ISO/SIQ 🤒</div>
         <div class="board-column-content">
             <div class="board-item"><div class="board-item-content" class="e">CARRILLO</div></div>
         </div>
